<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:key="category_about"
        app:title="@string/preferences_category_title_about">
        <Preference
            app:key="app_version"
            app:title="@string/preferences_app_version_title"
            app:selectable="true"
            app:icon="@drawable/ic_log"/>

        <Preference
            app:key="view_license"
            app:summary="@string/preferences_view_license_summary"
            app:title="@string/preferences_view_license_title"
            app:icon="@drawable/ic_log"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="category_appearance"
        app:title="@string/preferences_category_title_appearance">
        <ListPreference
            app:key="@string/preferences_theme_colour_key"
            app:title="@string/preferences_theme_colour_title"
            app:summary="%s"
            app:entries="@array/theme_colour_entries"
            app:entryValues="@array/theme_colour_values"
            app:defaultValue="@string/preferences_theme_value_pink"
            app:icon="@drawable/ic_resolution"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="category_general"
        app:title="@string/preferences_category_title_general">
        <Preference
            app:key="registered_hosts"
            tools:summary="@string/preferences_registered_hosts_summary"
            app:summary=" "
            app:title="@string/preferences_registered_hosts_title"
            app:fragment="com.metallic.chiaki.settings.SettingsRegisteredHostsFragment"
            app:icon="@drawable/ic_console_simple"/>

        <Preference
            app:key="psn_logout"
            app:title="@string/preferences_psn_logout_title"
            app:summary="@string/preferences_psn_login_summary_logged_in"
            app:icon="@drawable/ic_close_white"/>

        <Preference
            app:key="locale_display"
            app:title="@string/preferences_locale_title"
            app:summary="@string/preferences_locale_summary_not_set"
            app:selectable="true"
            app:icon="@drawable/ic_locale"/>

        <Preference
            app:key="cached_locale_display"
            app:title="@string/preferences_cached_locale_title"
            app:summary="@string/preferences_cached_locale_summary_not_set"
            app:selectable="true"
            app:icon="@drawable/ic_locale"/>

        <Preference
            app:key="remap_controller"
            app:title="@string/controller_remap_preference_title"
            app:summary="@string/controller_remap_preference_summary"
            app:icon="@drawable/ic_gamepad" />

        <SwitchPreference
            app:key="@string/preferences_microphone_enabled_key"
            app:title="@string/preferences_microphone_enabled_title"
            app:summary="@string/preferences_microphone_enabled_summary"
            app:icon="@drawable/ic_microphone" />

        <SwitchPreference
            app:key="@string/preferences_motion_enabled_key"
            app:title="@string/preferences_motion_enabled_title"
            app:summary="@string/preferences_motion_enabled_summary"
            app:icon="@drawable/ic_motion" />

        <SwitchPreference
            app:key="@string/preferences_button_haptic_enabled_key"
            app:title="@string/preferences_button_haptic_enabled_title"
            app:summary="@string/preferences_button_haptic_enabled_summary"
            app:icon="@drawable/ic_button_haptic" />

        <SwitchPreference
            app:key="@string/preferences_pip_enabled_key"
            app:title="@string/preferences_pip_enabled_title"
            app:summary="@string/preferences_pip_enabled_summary"
            app:defaultValue="true"
            app:icon="@drawable/ic_resolution"/>

        <SwitchPreference
            app:key="@string/preferences_log_verbose_key"
            app:title="@string/preferences_log_verbose_title"
            app:summary="@string/preferences_log_verbose_summary"
            app:icon="@drawable/ic_log" />

        <Preference
            app:key="logs"
            app:summary="@string/preferences_logs_summary"
            app:title="@string/preferences_logs_title"
            app:fragment="com.metallic.chiaki.settings.SettingsLogsFragment"
            app:icon="@drawable/ic_log"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:key="category_cas_sharpening"
        app:title="@string/preferences_category_title_cas_sharpening">
        <SwitchPreference
            app:key="@string/preferences_cas_sharpening_enabled_key"
            app:title="@string/preferences_cas_sharpening_enabled_title"
            app:summary="@string/preferences_cas_sharpening_enabled_summary"
            app:defaultValue="false"
            app:icon="@drawable/ic_resolution"/>

        <SeekBarPreference
            app:key="@string/preferences_cas_sharpening_level_key"
            app:title="@string/preferences_cas_sharpening_level_title"
            app:min="1"
            android:max="10"
            app:seekBarIncrement="1"
            app:defaultValue="1"
            app:showSeekBarValue="true"
            app:icon="@drawable/ic_resolution"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="category_stream"
        app:title="@string/preferences_category_title_stream">
        <ListPreference
            app:key="@string/preferences_resolution_key"
            app:title="@string/preferences_resolution_title"
            app:summary="%s"
            app:icon="@drawable/ic_resolution"/>

        <ListPreference
            app:key="@string/preferences_fps_key"
            app:title="@string/preferences_fps_title"
            app:summary="%s"
            app:icon="@drawable/ic_fps"/>

        <EditTextPreference
            app:key="@string/preferences_bitrate_key"
            app:title="@string/preferences_bitrate_title"
            app:icon="@drawable/ic_bitrate"/>

        <ListPreference
            app:key="@string/preferences_codec_key"
            app:title="@string/preferences_codec_title"
            app:summary="%s"
            app:icon="@drawable/ic_codec"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="category_game_library"
        app:title="@string/preferences_category_title_game_library">
        
        <ListPreference
            app:key="@string/preferences_cloud_resolution_pscloud_key"
            app:title="@string/preferences_cloud_resolution_pscloud_title"
            app:summary="%s"
            app:entries="@array/cloud_resolution_pscloud_entries"
            app:entryValues="@array/cloud_resolution_pscloud_values"
            app:defaultValue="720"
            app:icon="@drawable/ic_resolution"/>
        
        <ListPreference
            app:key="@string/preferences_cloud_datacenter_pscloud_key"
            app:title="@string/preferences_cloud_datacenter_pscloud_title"
            app:summary="%s"
            app:entries="@array/cloud_datacenter_entries"
            app:entryValues="@array/cloud_datacenter_values"
            app:defaultValue="Auto"
            app:icon="@drawable/ic_bitrate"/>

        <SeekBarPreference
            app:key="@string/preferences_cloud_bitrate_pscloud_key"
            app:title="@string/preferences_cloud_bitrate_pscloud_title"
            app:summary="@string/preferences_cloud_bitrate_pscloud_summary"
            app:min="2"
            android:max="200"
            app:seekBarIncrement="1"
            app:defaultValue="20"
            app:showSeekBarValue="true"
            app:icon="@drawable/ic_bitrate"/>    
    </PreferenceCategory>

    <PreferenceCategory
        app:key="category_game_catalog"
        app:title="@string/preferences_category_title_game_catalog">
        
        <ListPreference
            app:key="@string/preferences_cloud_resolution_psnow_key"
            app:title="@string/preferences_cloud_resolution_psnow_title"
            app:summary="%s"
            app:entries="@array/cloud_resolution_psnow_entries"
            app:entryValues="@array/cloud_resolution_psnow_values"
            app:defaultValue="720"
            app:icon="@drawable/ic_resolution"/>
        
        <ListPreference
            app:key="@string/preferences_cloud_datacenter_psnow_key"
            app:title="@string/preferences_cloud_datacenter_psnow_title"
            app:summary="%s"
            app:entries="@array/cloud_datacenter_entries"
            app:entryValues="@array/cloud_datacenter_values"
            app:defaultValue="Auto"
            app:icon="@drawable/ic_bitrate"/>
            
        <SeekBarPreference
            app:key="@string/preferences_cloud_bitrate_psnow_key"
            app:title="@string/preferences_cloud_bitrate_psnow_title"
            app:summary="@string/preferences_cloud_bitrate_psnow_summary"
            app:min="2"
            android:max="200"
            app:seekBarIncrement="1"
            app:defaultValue="20"
            app:showSeekBarValue="true"
            app:icon="@drawable/ic_bitrate"/>           
    </PreferenceCategory>

    <PreferenceCategory
        app:key="category_export"
        app:title="@string/preferences_category_title_export">
        <Preference
            app:key="@string/preferences_export_settings_key"
            app:summary="@string/preferences_export_settings_summary"
            app:title="@string/preferences_export_settings_title"
            app:icon="@drawable/ic_export"/>

        <Preference
            app:key="@string/preferences_import_settings_key"
            app:summary="@string/preferences_import_settings_summary"
            app:title="@string/preferences_import_settings_title"
            app:icon="@drawable/ic_import"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="category_icon_key"
        app:title="@string/preferences_category_title_icon_key">
        <Preference
            app:key="icon_key_streamable"
            app:title="@string/preferences_icon_key_streamable_title"
            app:selectable="true"
            app:icon="@drawable/badge_key_streamable"/>

        <Preference
            app:key="icon_key_not_streamable"
            app:title="@string/preferences_icon_key_not_streamable_title"
            app:selectable="true"
            app:icon="@drawable/badge_key_not_streamable"/>

        <Preference
            app:key="icon_key_unknown"
            app:title="@string/preferences_icon_key_unknown_title"
            app:selectable="true"
            app:icon="@drawable/badge_key_unknown"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="category_controller_shortcuts"
        app:title="@string/preferences_category_title_controller_shortcuts">
        <Preference
            app:key="controller_shortcut_playtime"
            app:title="@string/preferences_controller_shortcut_playtime_title"
            app:summary="@string/preferences_controller_shortcut_playtime_summary"
            app:selectable="true"
            app:icon="@drawable/ic_shortcut_square"/>

        <Preference
            app:key="controller_shortcut_trophies"
            app:title="@string/preferences_controller_shortcut_trophies_title"
            app:summary="@string/preferences_controller_shortcut_trophies_summary"
            app:selectable="true"
            app:icon="@drawable/ic_shortcut_square"/>

        <Preference
            app:key="controller_shortcut_add_to_home"
            app:title="@string/preferences_controller_shortcut_add_to_home_title"
            app:summary="@string/preferences_controller_shortcut_add_to_home_summary"
            app:selectable="true"
            app:icon="@drawable/ic_shortcut_start"/>

        <Preference
            app:key="controller_shortcut_icon_nav"
            app:title="@string/preferences_controller_shortcut_icon_nav_title"
            app:summary="@string/preferences_controller_shortcut_icon_nav_summary"
            app:selectable="true"
            app:icon="@drawable/ic_shortcut_select"/>

        <Preference
            app:key="controller_shortcut_quick_menu"
            app:title="@string/preferences_controller_shortcut_quick_menu_title"
            app:summary="@string/preferences_controller_shortcut_quick_menu_summary"
            app:selectable="true"
            app:icon="@drawable/ic_shortcut_back"/>
    </PreferenceCategory>
</PreferenceScreen>