<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:key="dualsense_info_category_status"
        app:title="@string/preferences_dualsense_info_category_status">
        <Preference
            app:key="dualsense_info_status"
            app:title="@string/preferences_dualsense_info_status_title"
            app:summary="@string/preferences_controller_tester_bt_status_loading"
            app:selectable="false"
            app:icon="@drawable/ic_gamepad" />
        <Preference
            app:key="dualsense_info_refresh"
            app:title="@string/preferences_dualsense_info_refresh_title"
            app:summary="@string/preferences_dualsense_info_refresh_summary"
            app:icon="@drawable/ic_log" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="dualsense_info_category_live"
        app:title="@string/preferences_dualsense_info_category_live">
        <Preference
            app:key="dualsense_info_live_input"
            app:title="@string/preferences_dualsense_info_live_input_title"
            app:summary="@string/preferences_dualsense_info_idle"
            app:selectable="false"
            app:icon="@drawable/ic_gamepad" />
        <Preference
            app:key="dualsense_info_input_filter_probe"
            app:title="@string/preferences_dualsense_info_input_filter_probe_title"
            app:summary="@string/preferences_dualsense_info_input_filter_probe_summary"
            app:icon="@drawable/ic_log" />
        <Preference
            app:key="dualsense_info_bt_mic_reset"
            app:title="@string/preferences_dualsense_info_mic_reset_title"
            app:summary="@string/preferences_dualsense_info_mic_reset_summary"
            app:icon="@drawable/ic_log" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="dualsense_info_category_factory"
        app:title="@string/preferences_dualsense_info_category_factory">
        <Preference
            app:key="dualsense_info_firmware"
            app:title="@string/preferences_dualsense_info_firmware_title"
            app:summary="@string/preferences_dualsense_info_idle"
            app:selectable="false"
            app:icon="@drawable/ic_log" />
        <Preference
            app:key="dualsense_info_factory"
            app:title="@string/preferences_dualsense_info_factory_title"
            app:summary="@string/preferences_dualsense_info_idle"
            app:selectable="false"
            app:icon="@drawable/ic_log" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="dualsense_info_category_log"
        app:title="@string/preferences_dualsense_info_category_log">
        <Preference
            app:key="dualsense_info_log"
            app:title="@string/preferences_controller_tester_bt_log_title"
            app:summary="@string/preferences_controller_tester_bt_log_empty"
            app:selectable="false"
            app:icon="@drawable/ic_log" />
    </PreferenceCategory>
</PreferenceScreen>
